--- a/data-jpa/src/main/resources/application.yml
+++ b/data-jpa/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/datajpa
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/jpa
+    username: test
+    password: test
+
 
   jpa:
     hibernate:
