startup.bat 추가.

--- a/jpashop/src/main/resources/application.yml
+++ b/jpashop/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost/jpashop
-    username: test
-    password: test
+    url: ${DB_STR}
+    username: ${username}
+    password: ${password}
     driver-class-name: org.postgresql.Driver
 
   jpa:
